feat: working with java8